# epipolar_consistency_python

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  setup.py
docs/: make.bat
src/: main.cpp  main_example.cpp
tests/: ecc.html  example.py  test.py  test_mareike.py
